src/test/ui/issue-11319.stderr
error[E0308]: match arms have incompatible types
  --> $DIR/issue-11319.rs:12:5
   |
12 | /     match Some(10) {
13 | |     //~^ ERROR match arms have incompatible types
14 | |     //~| expected type `bool`
15 | |     //~| found type `()`
...  |
20 | |         _       => true
21 | |     }
   | |_____^ expected bool, found ()
   |
   = note: expected type `bool`
              found type `()`
note: match arm with an incompatible type
  --> $DIR/issue-11319.rs:19:20
   |
19 |         None    => (),
   |                    ^^

error: aborting due to previous error

